# Parallel-computing

./: CMakeLists.txt  README.md
exp3/: exp3_2.cpp  exp3_3.cpp
exp4/: Parallel Monte Carlo Operation (Blocking).cpp  Parallel Monte Carlo Operation (Non-blocking).cpp  Parallel Monte Carlo Operation Reduced Version.cpp  Serial Monte Carlo Operation Version.cpp
实验4/: Parallel Monte Carlo Operation (Blocking).cpp  Serial Monte Carlo Operation Version.cpp
